syntax = "proto3";

package pb;

option go_package = "github.com/HoangLong2502/pharmago_be/pb";

import "google/protobuf/timestamp.proto";

import "entities/account.proto";
import "entities/service.proto";
import "entities/order.proto";
import "entities/variant.proto";

// Message cho bảng appointment_schedules
message AppointmentSchedule {
  int32 id = 1;
  string uuid = 2;
  string code = 3;
  int32 customer_id = 4;
  Account customer = 5;
  int32 company = 6;
  int32 doctor_id = 7;
  Account doctor = 8;
  string symptoms = 9;
  string diagnostic = 10;
  string qr_code_url = 11;
  bool is_done = 12;
  int32 user_created_id = 13;
  Account user_created = 14;
  int32 user_updated_id = 15;
  Account user_updated = 16;
  google.protobuf.Timestamp created_at = 17;
  google.protobuf.Timestamp updated_at = 18;
  repeated AppointmentScheduleService services = 19;
  repeated AppointmentScheduleUrl urls = 20;
  repeated AppointmentScheduleDrug drugs = 21;
}

// Message cho bảng appointment_schedule_service
message AppointmentScheduleService {
  int32 id = 1;
  string as_uuid = 2;
  Service service = 3;
  int32 service_id = 4;
  Order order_service = 5;
  int32 order_id = 6;
}

// Message cho bảng appointment_schedule_url
message AppointmentScheduleUrl {
  int32 id = 1;
  string as_uuid = 2;
  string url = 3;
  string name_doc = 4;
}

// Message cho bảng appointment_schedule_drug
message AppointmentScheduleDrug {
  int32 id = 1;
  string as_uuid = 2;
  int32 variant_id = 3;
  Variant variant = 4;
  string lieu_dung = 5;
  int32 quantity = 6;
}

// Example of a request to create an appointment schedule
message CreateAppointmentScheduleRequest {
  AppointmentSchedule appointment_schedule = 1;
}

// Example of a response containing an appointment schedule
message AppointmentScheduleResponse {
  AppointmentSchedule appointment_schedule = 1;
}

// Example of a list response containing multiple appointment schedules
message ListAppointmentSchedulesResponse {
  repeated AppointmentSchedule appointment_schedules = 1;
}
