syntax = "proto3";

package pb;

option go_package = "github.com/HoangLong2502/pharmago_be/pb";

import "entities/account.proto";
import "entities/variant.proto";
import "entities/simple_data.proto";

message Service {
    int32 id = 1;
    string code = 2;
    string title = 3;
    optional string entity = 4;
    Account staff = 5;
    optional string frequency = 6;
    string unit = 7;
    float price = 8;
    optional string description = 9;
    int32 company = 10;
    repeated Variant variants = 11;
    optional int32 reminder_time = 12;
    int32 used = 13;
    optional string chi_dinh = 14;
    optional string chong_chi_dinh = 15;
    optional string cong_dung = 16;
    optional string caution = 17;
    optional string hinh_thuc = 18;
    optional string tac_dung_phu = 19;
    optional string number_register = 20;
    optional string number_decision = 21;
    optional string cong_ty_dk = 22;
    optional string message = 23;
    optional SimpleData brand = 24;
    optional string action_time = 25;
}